there's now a Makefile to aid in bootstrapping the build/install of
mezzanine from CVS on a system that doesn't already have it.  I have
no idea why I didn't think of that before....

Also some cleanups and new kernel spec templates.
----------------------------------------------------------------------
Wed Aug 31 18:24:55 2005                        Michael Jennings (mej)

specgen can now download files from URL's!  So instead of having to
wget that tarball yourself, just run:

specgen http://www.spanky.org/download/foo-1.0.tar.gz
----------------------------------------------------------------------
Thu Sep  8 13:15:43 2005                                           mej

Added -A/--args option to pkgtool (mzbuild) to allow passing of
arbitrary parameters to, e.g., rpmbuild.

Example:  mzbuild -A "--define 'with_selinux 1'"
----------------------------------------------------------------------
Wed Sep 28 19:04:22 2005                        Michael Jennings (mej)

Minor kernel package template fixes.
----------------------------------------------------------------------
Thu Sep 29 17:51:15 2005                        Michael Jennings (mej)

Added SCons template for specgen.

Use URL for source tarball if available.

Print progress .'s while downloading package.

Use %{name} and %{version} in generated spec files whenever possible.
----------------------------------------------------------------------
Thu Sep 29 17:53:18 2005                        Michael Jennings (mej)

Oops.
----------------------------------------------------------------------
Mon Oct 17 13:45:34 2005                        Michael Jennings (mej)

Allow nuke_tree() to take multiple parameters.
----------------------------------------------------------------------
Mon Oct 17 16:01:22 2005                        Michael Jennings (mej)

Allow mzbuild to accept URL's instead of having to wget them first.
----------------------------------------------------------------------